# DrugInsightAI

./: .bandit  .gitignore  .isort.cfg  .mcp.json  .pre-commit-config.yaml  .pre-commit-setup.md  .pylintrc  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml
.claude/: settings.local.json
.claude/agents/: software-spec-manager.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: user_story.md
.github/workflows/: ci.yml
apps/mobile/: package.json
apps/web/: package.json  tsconfig.json
docs/api/specifications/: drugs-new-endpoint.md
docs/web/specifications/: landing-page.md
infra/database/: docker-compose.yml  docker-helper.sh
services/api/: .coverage  .env.example  Dockerfile  README.md  docker-compose.yml  fix_imports.py  openapi.yaml  pyproject.toml  pytest.ini  requirements-dev.txt
services/api/scripts/: update-requirements-dev.sh  update_requirements_dev.py
services/api/src/: config.py  database.py  exceptions.py  main.py  minimal_test.py  test_runner.py
services/api/src/middleware/: __init__.py  auth.py  logging.py
services/api/src/models/: __init__.py  clinical_trials.py  companies.py  drugs.py  users.py
services/api/src/routes/: __init__.py  auth.py  clinical_trials.py  companies.py  drugs.py  health.py  market.py  users.py
services/api/src/schemas/: auth.py
services/api/tests/: __init__.py  conftest.py  test_auth.py  test_drugs.py  test_health.py  test_integration.py  test_minimal.py  test_users.py
services/data-harvesters/: pyproject.toml
services/data-processors/: pyproject.toml
tests/integration/insomnia/: DrugInsightAI_v1.json  README.md  environments.json
tests/integration/insomnia/auth/: login_requests.json
tests/integration/insomnia/drugs/: drug_requests.json
tests/integration/insomnia/health/: monitoring_requests.json
tests/integration/insomnia/test-suites/: smoke_tests.json
tests/integration/insomnia/users/: user_requests.json
