[tool.poetry]
name = "druginsightai-api"
version = "0.1.0"
description = "REST API service for DrugInsightAI platform"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
pydantic = "^2.4.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
redis = "^5.0.0"
celery = "^5.3.0"
# Additional dependencies for the API
asyncpg = "^0.29.0"  # PostgreSQL async driver
boto3 = "^1.34.0"  # AWS SDK for Cognito
structlog = "^23.0.0"  # Structured logging
pydantic-settings = "^2.1.0"  # Settings management
email-validator = "^2.1.0"  # Email validation for pydantic
bcrypt = "^4.1.0"  # Password hashing

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"
mypy = "^1.0"
# Additional dev dependencies for comprehensive testing
pytest-cov = "^4.1.0"  # Coverage reporting
pytest-mock = "^3.12.0"  # Mocking utilities
factory-boy = "^3.3.0"  # Test data factories
faker = "^22.0.0"  # Fake data generation
pytest-xdist = "^3.5.0"  # Parallel test execution
pytest-benchmark = "^4.0.0"  # Performance benchmarking

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
