[tool.poetry]
name = "druginsightai-api"
version = "0.1.0"
description = "REST API service for DrugInsightAI platform"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
pydantic = "^2.4.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
redis = "^5.0.0"
celery = "^5.3.0"
# Additional dependencies for the API
asyncpg = "^0.29.0"  # PostgreSQL async driver
boto3 = "^1.34.0"  # AWS SDK for Cognito
structlog = "^23.0.0"  # Structured logging
pydantic-settings = "^2.1.0"  # Settings management
email-validator = "^2.1.0"  # Email validation for pydantic
bcrypt = "^4.1.0"  # Password hashing

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"
mypy = "^1.0"
# Additional dev dependencies for comprehensive testing
pytest-cov = "^4.1.0"  # Coverage reporting
pytest-mock = "^3.12.0"  # Mocking utilities
factory-boy = "^3.3.0"  # Test data factories
faker = "^22.0.0"  # Fake data generation
pytest-xdist = "^3.5.0"  # Parallel test execution
pytest-benchmark = "^4.0.0"  # Performance benchmarking
# Type stubs for MyPy compatibility
types-redis = "^4.6.0"
types-requests = "^2.31.0"
types-python-jose = "^3.3.4"
types-passlib = "^1.7.7"
boto3-stubs = "^1.34.0"
botocore-stubs = "^1.34.0"
types-PyJWT = "^1.7.0"  # JWT library types
# Additional testing
fakeredis = "^2.20.0"  # In-memory Redis for testing
aiosqlite = "^0.19.0"  # Async SQLite for testing
tomli = "^2.0.0"  # TOML parsing for Python < 3.11

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
# Allow imports from src directory
mypy_path = "src"
# Ignore missing imports for testing and external packages
ignore_missing_imports = true
# Show error codes
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "conftest.*",
]
ignore_errors = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
