[tool.poetry]
name = "druginsightai-data-processors"
version = "0.1.0"
description = "Data processing and analysis service for pharmaceutical data"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.4.0"
celery = "^5.3.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"
mypy = "^1.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"